[package]
name = "ironforge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
