[package]
name = "ironforge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.38.0", features = ["sync"] }
anyhow = "1.0.91"
thiserror = "1.0.64"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = { version = "2.4" }
