[package]
name = "ironforge"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
strum = { version = "0.27.1", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1.46.1", features = ["sync"] }
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
governor = "0.10"
nonzero_ext = "0.3"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-macros = { version = "2.5" }
